# codeos

./: .gitignore  Cargo.toml  LICENSE  README.md  badge.json
.github/workflows/: ci.yml  codeos-badge.yml  codeos-certify.yml
benchmark/: CRITERIO_PRE_REGISTRATO.md  README.md  REAL_WORLD_VALIDATION.it.md  REAL_WORLD_VALIDATION.md  RISULTATI.md  payments.rs  reliability.rs
benchmark/scaled/: PROMPT_DA_ESEGUIRE.md  PROTOCOLLO.md  RETRIEVAL_PRECISION.md  RISULTATI_SCALED.md
benchmark/scaled/risposte/: T2_pagamenti.md  T5_lock.md
benchmark/scaled/substrates/: 01_wilson.rs  02_payments.rs  03_split.rs  04_audit.rs  05_ledger_lock.rs  06_session.rs
config/: example.codeos.yaml
crates/codeos-core/: Cargo.toml
crates/codeos-core/src/: lib.rs
crates/codeos-core/tests/: anti_false_positives.rs  temporal_birth.rs
crates/codeos-graph/: Cargo.toml
crates/codeos-graph/benches/: resolve.rs
crates/codeos-graph/src/: actor.rs  lib.rs  resolver.rs
crates/codeos-guardian/: Cargo.toml
crates/codeos-guardian/src/: actor.rs  declared.rs  guardian.rs  invariant.rs  lib.rs  license.rs  meta.rs
crates/codeos-memory/: Cargo.toml
crates/codeos-memory/src/: actor.rs  decision.rs  evidence.rs  integrity.rs  lib.rs  markdown.rs  proposal.rs  selection.rs  store.rs
crates/codeos-paleo/: Cargo.toml
crates/codeos-paleo/src/: abstention.rs  adr.rs  fossil.rs  history.rs  lib.rs  miner.rs
crates/codeos-paleo/tests/: git_reader.rs
crates/codeos-parser/: Cargo.toml
crates/codeos-parser/benches/: parsing.rs
crates/codeos-parser/src/: actor.rs  cpp.rs  csharp_lang.rs  go.rs  java_lang.rs  lib.rs  python.rs  ruby_lang.rs  rust_lang.rs  swift_lang.rs  traits.rs  typescript.rs  workspace.rs
crates/codeos-query/: Cargo.toml
crates/codeos-query/src/: actor.rs  engine.rs  lib.rs
crates/codeos-rpc/: Cargo.toml  build.rs
crates/codeos-rpc/proto/: codeos.proto
crates/codeos-rpc/src/: cli.rs  lib.rs  main.rs  mcp.rs
crates/codeos-storage/: Cargo.toml
crates/codeos-storage/src/: lib.rs  sqlite.rs
crates/codeos-types/: Cargo.toml
crates/codeos-types/src/: bus.rs  lib.rs
docs/: agent-guardrail.md  demo.cast
docs/adr/: 0001-record-architecture-decisions.md  0002-onion-layered-crates.md  0003-actor-model-message-passing.md  0004-anti-false-positive-principle.md  0005-parser-never-touches-the-graph.md  0006-sqlite-for-the-graph-store.md
eval/: ab-intento-risultati-2026-06-12.md  ab-intento.md  intent-battery.sh  language-battery.sh  localization.sh  real-world-validation.md  verify.sh
eval/moat-benchmark/: RISULTATI.md
eval/moat-benchmark/scaled/: RETRIEVAL_PRECISION.md
eval/moat-benchmark/scaled/risposte/: T1_wilson_giudizio.md  T1_wilson_grezze.md  T3_denaro.md  T4_pii.md  T6_auth.md
eval/moat-benchmark/scaled/substrates/: 01_wilson.rs  06_session.rs
indovina-la-canzone/: README.md  backup-v1.html  index.html  manifest.webmanifest  sw.js
templates/github-actions/: codeos-badge.yml  codeos-certify.yml
vscode-extension/: .gitignore  .vscodeignore  LICENSE  package-lock.json  package.json
vscode-extension/scripts/: sync-proto.js
vscode-extension/src/: client.ts  extension.ts  sidebar.ts
