[workspace]
resolver = "2"
members = [
    "crates/codeos-types",
    "crates/codeos-storage",
    "crates/codeos-parser",
    "crates/codeos-graph",
    "crates/codeos-memory",
    "crates/codeos-paleo",
    "crates/codeos-guardian",
    "crates/codeos-query",
    "crates/codeos-core",
    "crates/codeos-rpc",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Runtime / async
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"

# Dati / serializzazione
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

# Parsing
tree-sitter = "0.22"
tree-sitter-python = "0.21"
tree-sitter-rust = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-go = "0.21"
tree-sitter-java = "0.21"
tree-sitter-cpp = "0.22"
tree-sitter-ruby = "0.21"
tree-sitter-swift = "=0.5.0"
tree-sitter-c-sharp = "0.21"

# Storage
rusqlite = { version = "0.31", features = ["bundled"] }

# gRPC
tonic = "0.11"
tonic-build = "0.11"
prost = "0.12"

# Osservabilita / errori
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

# Benchmark (solo dev). default-features=false esclude plotters/rayon: niente
# report HTML, solo le misure a terminale, così l'albero di dipendenze resta snello.
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

# Crate interni (struttura a cipolla, invariante 1.5)
codeos-types = { path = "crates/codeos-types" }
codeos-storage = { path = "crates/codeos-storage" }
codeos-parser = { path = "crates/codeos-parser" }
codeos-graph = { path = "crates/codeos-graph" }
codeos-memory = { path = "crates/codeos-memory" }
codeos-paleo = { path = "crates/codeos-paleo" }
codeos-guardian = { path = "crates/codeos-guardian" }
codeos-query = { path = "crates/codeos-query" }
codeos-core = { path = "crates/codeos-core" }

[profile.dev]
# Build piu veloci in dev: meno ottimizzazione dei nostri crate.
opt-level = 0
