[package]
name = "codeos-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Trait LanguageParser, PythonParser (Tree-sitter) e ParserActor."

[dependencies]
codeos-types = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-java = { workspace = true }
tree-sitter-cpp = { workspace = true }
tree-sitter-ruby = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
# Solo per leggere il campo `name` di un package.json: il JSON scritto a mano non
# si parsa a vista in modo affidabile (vedi src/workspace.rs).
serde_json = { workspace = true }
stacker = "0.1.24"

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "parsing"
harness = false
