[package]
name = "codeos-rpc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Server gRPC (tonic): la facciata di trasporto verso CLI e plugin VS Code."

[lib]
path = "src/lib.rs"

[[bin]]
name = "codeos-server"
path = "src/main.rs"

[[bin]]
name = "codeos"
path = "src/cli.rs"

[dependencies]
codeos-types = { workspace = true }
codeos-core = { workspace = true }
codeos-storage = { workspace = true }
codeos-memory = { workspace = true }
codeos-paleo = { workspace = true }

tonic = { workspace = true }
prost = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true, features = ["net"] }
uuid = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
# Fornisce un binario `protoc` prebuilt: niente da installare a mano sul sistema.
protoc-bin-vendored = "3"
